--- a/popup.html
+++ b/popup.html
@@ -334,6 +334,24 @@
                 <input type="text" id="editCommitMessage" placeholder="feat: implement new feature" class="w-full p-2.5 border-2 border-gray-200 rounded-md text-sm transition-colors duration-300 box-border focus:outline-none focus:border-blue-500">
             </div>
             
+            <div class="mb-4">
+                <label for="editStatus" class="block mb-2 font-semibold text-gray-700">Status:</label>
+                <select id="editStatus" class="w-full p-2.5 border-2 border-gray-200 rounded-md text-sm transition-colors duration-300 box-border focus:outline-none focus:border-blue-500">
+                    <option value="in-specification">In Specification</option>
+                    <option value="in-progress">In Progress</option>
+                    <option value="code-review">Code Review</option>
+                    <option value="completed">Completed</option>
+                    <option value="in-review">In Review</option>
+                    <option value="rejected-cr">Rejected (CR)</option>
+                    <option value="rejected">Rejected</option>
+                    <option value="blocked">Blocked</option>
+                    <option value="done">Done</option>
+                    <option value="on-hold">On Hold</option>
+                    <option value="ready-release">Ready to Release</option>
+                    <option value="closed">Closed</option>
+                </select>
+            </div>
+            
             <div class="flex gap-2.5 mt-5 pt-4 border-t border-gray-200">
                 <button class="bg-blue-50 ring-1 ring-blue-400 text-black  border-none px-3 py-3 rounded cursor-pointer text-xs font-medium whitespace-nowrap flex-1 w-full hover:bg-blue-100 transition-all duration-300" id="editModalSaveBtn">💾 Save Changes</button>
                 <button class="bg-red-50 ring-1 ring-red-400 text-black border-none px-3 py-3 rounded cursor-pointer text-xs font-medium whitespace-nowrap flex-1 w-full hover:bg-red-100 transition-all duration-300" id="editModalCancelBtn">❌ Cancel</button>
