--- a/tabs/history/history.html
+++ b/tabs/history/history.html
@@ -1,8 +1,33 @@
 <!-- History Tab -->
 <div id="history-tab" class="tab-content hidden">
     <div class="mb-4">
-        <label for="historySearch" class="block mb-2 font-semibold text-gray-700">🔍 Search History:</label>
-        <input type="text" id="historySearch" placeholder="Search by task ID or title..." class="w-full p-2.5 border-2 border-gray-200 rounded-md text-sm transition-colors duration-300 box-border focus:outline-none focus:border-blue-500">
+        <div class="flex items-center justify-between mb-2">
+            <label for="historySearch" class="font-semibold text-gray-700">🔍 Search & Filter History:</label>
+            <div id="autoSearchIndicator" class="hidden truncate text-xs text-blue-600 bg-blue-50 px-2  rounded-md border border-blue-200">
+                🔍 Auto-searched
+            </div>
+        </div>
+        <div class="flex gap-2">
+            <div class="flex-1 relative">
+                <input type="text" id="historySearch" placeholder="Search by task ID or title..." class="w-full p-2.5 pr-8 border-2 border-gray-200 rounded-md text-sm transition-colors duration-300 box-border focus:outline-none focus:border-blue-500">
+                <button id="clearSearchBtn" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-lg font-normal w-5 h-5 items-center justify-center rounded-full hover:bg-gray-200 transition-all duration-200 cursor-pointer hidden" title="Clear search" style="display: none; line-height: 1;">×</button>
+            </div>
+            <select id="statusFilter" class="px-3 py-2.5 border-2 border-gray-200 rounded-md text-sm transition-colors duration-300 box-border focus:outline-none focus:border-blue-500 bg-white min-w-[140px]">
+                <option value="">All Statuses</option>
+                <option value="in-specification">In Specification</option>
+                <option value="in-progress">In Progress</option>
+                <option value="code-review">Code Review</option>
+                <option value="completed">Completed</option>
+                <option value="in-review">In Review</option>
+                <option value="rejected-cr">Rejected (CR)</option>
+                <option value="rejected">Rejected</option>
+                <option value="blocked">Blocked</option>
+                <option value="done">Done</option>
+                <option value="on-hold">On Hold</option>
+                <option value="ready-release">Ready to Release</option>
+                <option value="closed">Closed</option>
+            </select>
+        </div>
     </div>
     
     <div id="historyContainer">
