--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,7 @@
         <div class="flex mb-3 bg-gray-50 gap-1 rounded-lg">
             <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium bg-blue-500 text-white" data-tab="generate">Generate</div>
             <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="history">History</div>
+            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="templates">Templates</div>
             <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="pomodoro">Pomodoro</div>
             <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="settings">Settings</div>
         </div>
@@ -322,6 +323,11 @@
             <div class="mb-4">
                 <label for="editSourceUrl" class="block mb-2 font-semibold text-gray-700">Source URL:</label>
                 <input type="url" id="editSourceUrl" placeholder="https://example.com/task-url" class="w-full p-2.5 border-2 border-gray-200 rounded-md text-sm transition-colors duration-300 box-border focus:outline-none focus:border-blue-500">
+            </div>
+            
+            <div class="mb-4">
+                <label for="editGitlabMergeRequestUrl" class="block mb-2 font-semibold text-gray-700">GitLab Merge Request URL:</label>
+                <input type="url" id="editGitlabMergeRequestUrl" placeholder="https://gitlab.com/project/merge_requests/123" class="w-full p-2.5 border-2 border-gray-200 rounded-md text-sm transition-colors duration-300 box-border focus:outline-none focus:border-blue-500">
             </div>
             
             <div class="mb-4">
