--- a/tabs/pomodoro/pomodoro.html
+++ b/tabs/pomodoro/pomodoro.html
@@ -1,6 +1,13 @@
 <!-- Pomodoro Tab -->
 <div id="pomodoro-tab" class="tab-content hidden">
     
+    <style>
+        @keyframes pulse {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.5; }
+        }
+    </style>
+    
     <!-- Settings Modal -->
     <div id="settingsModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden items-center justify-center">
         <div class="bg-white rounded-lg p-6 max-w-md w-full mx-4 max-h-96 overflow-y-auto">
