Refactor code structure for improved readability and maintainability

--- a/popup-new.html
+++ b/popup-new.html
@@ -14,8 +14,8 @@
             <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium bg-blue-500 text-white" data-tab="generate">Generate</div>
             <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="history">History</div>
             <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="templates">Templates</div>
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="pomodoro">Pomodoro</div>
             <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="settings">Settings</div>
+            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="tools">Tools</div>
         </div>
         
         <!-- Tab Content Container -->
