--- a/tabs/mattermost/mattermost.html
+++ b/tabs/mattermost/mattermost.html
@@ -1,4 +1,4 @@
-<div id="mattermost-tab" class="tab-content hidden"></div>
+<div id="mattermost-tab" class="tab-content hidden">
     <div class="h-full flex flex-col p-4">
         <!-- Header -->
         <div class="flex items-center mb-6 pb-4 border-b border-gray-200">
@@ -29,6 +29,11 @@
                 <!-- Login Form -->
                 <div id="login-form" class="space-y-4">
                     <div>
+                        <label for="server-url" class="block text-sm font-medium text-gray-700 mb-1">Mattermost Server URL</label>
+                        <input type="url" id="server-url" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="https://your-mattermost-server.com" value="https://chat.twntydigital.de">
+                        <p class="text-xs text-gray-500 mt-1">Enter your Mattermost server URL (without /api/v4)</p>
+                    </div>
+                    <div>
                         <label for="login-id" class="block text-sm font-medium text-gray-700 mb-1">Email or Username</label>
                         <input type="text" id="login-id" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Enter your email or username">
                     </div>
@@ -53,6 +58,11 @@
 
                 <!-- Personal Access Token -->
                 <div class="space-y-4">
+                    <div>
+                        <label for="token-server-url" class="block text-sm font-medium text-gray-700 mb-1">Mattermost Server URL</label>
+                        <input type="url" id="token-server-url" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="https://your-mattermost-server.com" value="https://chat.twntydigital.de">
+                        <p class="text-xs text-gray-500 mt-1">Enter your Mattermost server URL (without /api/v4)</p>
+                    </div>
                     <div>
                         <label for="personal-token" class="block text-sm font-medium text-gray-700 mb-1">Personal Access Token</label>
                         <input type="text" id="personal-token" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Enter your personal access token">
