--- a/tabs/settings/settings.html
+++ b/tabs/settings/settings.html
@@ -20,6 +20,14 @@
     <span id="temperatureValue" class="text-sm text-gray-600">0.3</span>
 </div>
 
+<div class="mb-4">
+    <label for="timeEstimationPrompt" class="block mb-2 font-semibold text-gray-700">⏱️ Time Estimation Prompt:</label>
+    <textarea id="timeEstimationPrompt" placeholder="Custom prompt for time estimation generation..." class="w-full p-2.5 border-2 border-gray-200 rounded-md text-sm transition-colors duration-300 box-border focus:outline-none focus:border-blue-500 h-32 resize-y"></textarea>
+    <div class="text-xs text-gray-500 mt-1">
+        <small>Customize the AI prompt for time estimation. Use {taskId}, {taskTitle}, and {taskDescription} as placeholders.</small>
+    </div>
+</div>
+
 <!-- Rate Limits Display -->
 <div class="mb-4">
     <label class="block mb-2 font-semibold text-gray-700">Rate Limits (Free Tier):</label>
