feat(gemini): add model-specific rate limits and Google Meet history tracking
- Implement dynamic rate limits for different Gemini models
- Add Google Meet history tracking with room ID support
- Improve error handling and rate limit warnings
- Replace Active Mode with Google Meet history UI
- Add debug tools for testing meet history functionality

--- a/tabs/generate/generate.html
+++ b/tabs/generate/generate.html
@@ -2,7 +2,7 @@
 <div id="generate-tab" class="tab-content block">
     <div id="rateLimitWarning"
         class="bg-red-100 text-red-700 p-2.5 rounded-md mb-2 text-xs border-l-4 border-red-500 hidden">
-        ⚠️ Rate limit reached. Free tier: 15 requests/minute, 1,500 requests/day. Please wait.
+        ⚠️ Rate limit reached for selected model. Please wait before making another request.
     </div>
 
     <div class="flex gap-2 items-center mb-2">
