feat(tools): enhance unit converter with vw/vh support and presets
Add support for vw/vh conversions in the tools tab along with screen size presets.
Improve UI with better layout and active state indicators for unit selection.

--- a/tabs/mattermost/mattermost.html
+++ b/tabs/mattermost/mattermost.html
@@ -1,5 +1,5 @@
 <div id="mattermost-tab" class="tab-content hidden">
-    <div class="h-full flex flex-col p-4">
+    <div class="h-full flex flex-col">
         <!-- Header -->
         <div class="flex items-center mb-6 pb-4 border-b border-gray-200">
             <div class="w-8 h-8 mr-3 flex items-center justify-center">
