--- a/popup-new.html
+++ b/popup-new.html
@@ -6,17 +6,17 @@
     <script src="./tailwind.config.js"></script>
     <link rel="stylesheet" href="custom.css">
 </head>
-<body class="w-[500px] p-5 font-sans bg-gradient-to-br from-blue-500 to-purple-600 text-white m-0">
+<body class="w-full font-sans rounded-md bg-black text-black m-0">
     <div class="bg-white/95 h-full rounded-xl p-5 text-gray-800 shadow-2xl">
         
         <!-- Tab Navigation -->
-        <div class="flex mb-5 bg-gray-50 gap-1 rounded-lg p-1">
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium bg-blue-500 text-white" data-tab="generate">Generate</div>
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="history">History</div>
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="templates">Templates</div>
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="mattermost">Mattermost</div>
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="settings">Settings</div>
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="tools">Tools</div>
+        <div class="flex mb-5 bg-blue-100 gap-1 rounded-lg">
+            <div class="tab flex-1 px-2.5 py-2 text-center cursor-pointer rounded-md transition-all duration-300 font-medium bg-blue-500 text-white" data-tab="generate">Generate</div>
+            <div class="tab flex-1 px-2.5 py-2 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="history">History</div>
+            <div class="tab flex-1 px-2.5 py-2 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="templates">Templates</div>
+            <div class="tab flex-1 px-2.5 py-2 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="mattermost">Mattermost</div>
+            <div class="tab flex-1 px-2.5 py-2 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="tools">Tools</div>
+            <div class="tab flex-1 px-2.5 py-2 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="settings">Settings</div>
         </div>
         
         <!-- Tab Content Container -->
