--- a/popup.html
+++ b/popup.html
@@ -9,12 +9,12 @@
 <body class="w-[500px] p-5 font-sans bg-gradient-to-br from-blue-500 to-purple-600 text-white m-0">
     <div class="bg-white/95 h-full rounded-xl p-5 text-gray-800 shadow-2xl">
         <div class="flex mb-3 bg-gray-50 gap-1 rounded-lg">
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium bg-blue-500 text-white" data-tab="generate">Generate</div>
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="history">History</div>
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="templates">Templates</div>
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="mattermost">Mattermost</div>
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="tools">Tools</div>
-            <div class="tab flex-1 p-2.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="settings">Settings</div>
+            <div class="tab flex-1 px-2.5 py-0.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium bg-blue-500 text-white" data-tab="generate">Generate</div>
+            <div class="tab flex-1 px-2.5 py-0.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="history">History</div>
+            <div class="tab flex-1 px-2.5 py-0.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="templates">Templates</div>
+            <div class="tab flex-1 px-2.5 py-0.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="mattermost">Mattermost</div>
+            <div class="tab flex-1 px-2.5 py-0.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="tools">Tools</div>
+            <div class="tab flex-1 px-2.5 py-0.5 text-center cursor-pointer rounded-md transition-all duration-300 font-medium hover:bg-gray-100" data-tab="settings">Settings</div>
         </div>
         
         <!-- Generate Tab -->
