--- a/tabs/tools/tools.html
+++ b/tabs/tools/tools.html
@@ -101,11 +101,14 @@
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-2">Overlay Position</label>
                         <select id="overlayPosition" class="px-3 py-2 text-sm border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 bg-white">
-                            <option value="bottom-right">Bottom Right</option>
-                            <option value="bottom-left">Bottom Left</option>
-                            <option value="bottom-center">Bottom Center</option>
-                            <option value="top-right">Top Right</option>
                             <option value="top-left">Top Left</option>
+                            <option value="top-middle">Top Middle</option>
+                            <option value="top-right">Top Right</option>
+                            <option value="right-middle">Right Middle</option>
+                            <option value="bottom-right">Bottom Right</option>
+                            <option value="bottom-middle">Bottom Middle</option>
+                            <option value="bottom-left">Bottom Left</option>
+                            <option value="left-middle">Left Middle</option>
                         </select>
                     </div>
                 </div>
@@ -165,9 +168,13 @@
                         <label class="block text-sm font-medium text-gray-700 mb-2">Monitor Position</label>
                         <select id="performancePosition" class="px-3 py-2 text-sm border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 bg-white">
                             <option value="top-left">Top Left</option>
+                            <option value="top-middle">Top Middle</option>
                             <option value="top-right">Top Right</option>
-                            <option value="bottom-left">Bottom Left</option>
+                            <option value="right-middle">Right Middle</option>
                             <option value="bottom-right">Bottom Right</option>
+                            <option value="bottom-middle">Bottom Middle</option>
+                            <option value="bottom-left">Bottom Left</option>
+                            <option value="left-middle">Left Middle</option>
                         </select>
                     </div>
                     
