--- a/tabs/mattermost/mattermost.html
+++ b/tabs/mattermost/mattermost.html
@@ -253,6 +253,32 @@
                 </div>
             </div>
 
+            <!-- Meet Custom Room - Set Custom Status per Room -->
+            <div class="bg-white p-4 rounded-lg border border-gray-200 shadow-sm mb-2">
+                <h3 class="text-lg font-medium text-gray-800 mb-2">Meet Custom Room - Per-Room Status</h3>
+                <p class="text-sm text-gray-600 mb-4">Configure custom status (emoji, text, availability) for specific rooms</p>
+
+                <div class="space-y-3">
+                    <div class="flex gap-2">
+                        <input type="text" id="custom-room-code-input"
+                            class="flex-1 px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                            placeholder="Enter Google Meet room code (e.g., abc-defg-hij)">
+                        <button id="add-custom-room-btn"
+                            class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 transition-colors">
+                            Configure
+                        </button>
+                    </div>
+
+                    <div id="custom-room-list" class="space-y-2">
+                        <!-- Custom room configurations will be displayed here -->
+                    </div>
+
+                    <div id="custom-room-empty" class="text-center py-3 text-gray-500">
+                        <p class="text-sm">No custom rooms configured yet</p>
+                    </div>
+                </div>
+            </div>
+
             <!-- Save Settings -->
             <div class="flex space-x-3">
                 <button id="save-settings-btn"
@@ -331,6 +357,71 @@
                                 Create Preset
                             </button>
                             <button type="button" id="cancel-status-modal"
+                                class="bg-gray-300 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2 transition-colors">
+                                Cancel
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Custom Room Configuration Modal -->
+    <div id="custom-room-modal" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50">
+        <div class="flex items-center justify-center min-h-screen p-4">
+            <div class="bg-white rounded-lg shadow-xl max-w-md w-full">
+                <div class="p-6">
+                    <div class="flex items-center justify-between mb-4">
+                        <h3 class="text-lg font-medium text-gray-800">Configure Room Status</h3>
+                        <button id="close-custom-room-modal" class="text-gray-400 hover:text-gray-600">
+                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M6 18L18 6M6 6l12 12"></path>
+                            </svg>
+                        </button>
+                    </div>
+
+                    <form id="custom-room-form" class="space-y-4">
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Room Code</label>
+                            <input type="text" id="modal-room-code"
+                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                                placeholder="abc-defg-hij" readonly>
+                        </div>
+
+                        <div>
+                            <label for="custom-room-emoji" class="block text-sm font-medium text-gray-700 mb-1">Emoji</label>
+                            <input type="text" id="custom-room-emoji"
+                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                                placeholder="calendar" value="calendar">
+                            <p class="text-xs text-gray-500 mt-1">Use emoji name (e.g., calendar, coffee, meeting)</p>
+                        </div>
+
+                        <div>
+                            <label for="custom-room-text" class="block text-sm font-medium text-gray-700 mb-1">Status Text</label>
+                            <input type="text" id="custom-room-text"
+                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                                placeholder="In this meeting" value="In this meeting">
+                        </div>
+
+                        <div>
+                            <label for="custom-room-availability" class="block text-sm font-medium text-gray-700 mb-1">Availability</label>
+                            <select id="custom-room-availability"
+                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+                                <option value="online">Online</option>
+                                <option value="away">Away</option>
+                                <option value="dnd" selected>Do Not Disturb</option>
+                                <option value="offline">Offline</option>
+                            </select>
+                        </div>
+
+                        <div class="flex space-x-3 pt-4">
+                            <button type="submit"
+                                class="flex-1 bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition-colors">
+                                Save Configuration
+                            </button>
+                            <button type="button" id="cancel-custom-room-modal"
                                 class="bg-gray-300 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2 transition-colors">
                                 Cancel
                             </button>
