feat: Refactor settings tab with new managers and UI enhancements
- Added RateLimitManager to handle API rate limits dynamically.
- Introduced RulesManager for managing branch and commit rules.
- Created UIHelpers for common UI functionalities.
- Updated settings-refactored.js to integrate new managers and improve event handling.
- Enhanced settings.html with improved layout and user experience for settings and rules management.
- Removed deprecated rate limit configurations from settings.js.

--- a/popup-new.html
+++ b/popup-new.html
@@ -93,6 +93,9 @@
         </div>
     </div>
     
+    <!-- Global Toast Messages Container -->
+    <div id="status-messages" style="position: fixed; top: 100px; right: 16px; z-index: 9999; display: flex; flex-direction: column; gap: 8px; pointer-events: auto;"></div>
+    
     <!-- Load the main application script -->
     <script type="module" src="popup-main.js"></script>
 </body>
